force-app/main/default/objects/Credentials__c/fields/Certficate__c.field-meta.xml
<CustomField>
    <fullName>Certficate__c</fullName>
    <label>Certificate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>