force-app/main/default/objects/Credentials__c/fields/Json__c.field-meta.xml
<CustomField>
    <fullName>Json__c</fullName>
    <label>Json</label>
    <length>255</length>
    <type>Text</type>
</CustomField>