force-app/main/default/objects/Credentials__c/fields/Last_sent__c.field-meta.xml
<CustomField>
    <fullName>Last_sent__c</fullName>
    <label>Last sent</label>
    <type>DateTime</type>
</CustomField>